# PRISM_analyzer

./: README.md
analyzer/: Makefile.autoconf  acinclude.m4  config.status  configure
analyzer/_build_logs/: cmd-1839678.err  cmd-1839678.out  cmd-1856974.err  cmd-1856974.out  cmd-1857436.out  cmd-3486466.out  cmd-3486587.err  cmd-3486587.out  cmd-3491240.out  cmd-3492240.err  cmd-3494538.err  cmd-3505170.err  cmd-3505170.out  cmd-3505345.out  cmd-3505357.out  cmd-4022866.err  cmd-547228.err  cmd-547228.out  cmd-672044.out  cmd-673872.err  cmd-723128.out
analyzer/autom4te.cache/: output.0  requests  traces.0  traces.1
analyzer/infer/: dune-workspace
analyzer/infer/_build/: .db  .digest-db  .to-delete-in-source-tree  log
analyzer/infer/_build/.dune/default/src/: dune  dune.ml
analyzer/infer/_build/.dune/default/src/al/: dune  dune.ml
analyzer/infer/_build/.dune/default/src/clang/: dune  dune.ml
analyzer/infer/_build/.dune/default/src/integration/: dune  dune.ml
analyzer/infer/_build/.dune/default/src/java/: dune  dune.ml
analyzer/infer/_build/.dune/default/src/opensource/: dune  dune.ml
analyzer/infer/_build/.dune/default/src/unit/: dune  dune.ml
analyzer/infer/_build/default/.dune/: configurator  configurator.v2
analyzer/infer/_build/default/src/: .merlin  infer.pp.ml  infer.pp.mli
analyzer/infer/_build/default/src/.infer.eobjs/: infer.pp.ml.d  infer.pp.mli.d
analyzer/infer/_build/default/src/IR/: .merlin  Annot.pp.ml  Annot.pp.mli  Attributes.pp.ml  Attributes.pp.mli  BUILTINS.pp.ml  BiabductionModels.pp.ml  BiabductionModels.pp.mli  Binop.pp.ml  Binop.pp.mli  BuiltinDecl.pp.ml  BuiltinDecl.pp.mli  CSharpClassName.pp.ml  CSharpClassName.pp.mli  CallFlags.ml  CallFlags.pp.ml  CallFlags.pp.mli  CapturedVar.pp.ml  CapturedVar.pp.mli  Cfg.pp.ml  Cfg.pp.mli  ClangMethodKind.pp.ml  ClangMethodKind.pp.mli  Const.pp.ml  Const.pp.mli  DecompiledExp.pp.ml  DecompiledExp.pp.mli  DotCfg.pp.ml  DotCfg.pp.mli  Exp.pp.ml  Exp.pp.mli  Fieldname.pp.ml  Fieldname.pp.mli  Filtering.pp.ml  Filtering.pp.mli  IR.cmxa  Ident.pp.ml  Ident.pp.mli  Instrs.pp.ml  Instrs.pp.mli  (+49 more)
analyzer/infer/_build/default/src/absint/: .merlin  Absint.cmxa  AbstractDomain.pp.ml  AbstractDomain.pp.mli  AbstractInterpreter.pp.ml  AbstractInterpreter.pp.mli  AccessPath.pp.ml  AccessPath.pp.mli  AccessTree.pp.ml  AccessTree.pp.mli  AnalysisCallbacks.pp.ml  AnalysisCallbacks.pp.mli  AnalysisState.pp.ml  AnalysisState.pp.mli  AndroidFramework.pp.ml  AndroidFramework.pp.mli  Bindings.pp.ml  Bindings.pp.mli  CallSite.pp.ml  CallSite.pp.mli  ConcurrencyModels.pp.ml  ConcurrencyModels.pp.mli  DataFlow.pp.ml  DataFlow.pp.mli  Decompile.pp.ml  Decompile.pp.mli  Errlog.pp.ml  Errlog.pp.mli  ExplicitTrace.pp.ml  ExplicitTrace.pp.mli  FormalMap.pp.ml  FormalMap.pp.mli  HilExp.pp.ml  HilExp.pp.mli  HilInstr.pp.ml  HilInstr.pp.mli  IdAccessPathMapDomain.pp.ml  IdAccessPathMapDomain.pp.mli  InterproceduralAnalysis.pp.ml  InterproceduralAnalysis.pp.mli  (+48 more)
analyzer/infer/_build/default/src/al/: ASTLanguage.cmxa
analyzer/infer/_build/default/src/aprval/: APRVAL.cmxa  Extractor.pp.ml  PatchValidator.pp.ml  aPRVAL.ml-gen
analyzer/infer/_build/default/src/atd/: .merlin  ATDGenerated.cmxa  InferCommand.ml  InferCommand.pp.ml  InferCommand.pp.mli  aTDGenerated.ml-gen  clang_profiler_samples_j.ml  clang_profiler_samples_j.mli  clang_profiler_samples_j.pp.ml  clang_profiler_samples_j.pp.mli  clang_profiler_samples_t.mli  clang_profiler_samples_t.pp.ml  clang_profiler_samples_t.pp.mli  config_impact_data_j.ml  config_impact_data_j.mli  config_impact_data_j.pp.ml  config_impact_data_j.pp.mli  config_impact_data_t.ml  config_impact_data_t.pp.ml  config_impact_data_t.pp.mli  java_method_decl_j.ml  java_method_decl_j.mli  java_method_decl_j.pp.ml  java_method_decl_j.pp.mli  java_method_decl_t.mli  java_method_decl_t.pp.ml  java_method_decl_t.pp.mli  java_profiler_samples_j.ml  java_profiler_samples_j.mli  java_profiler_samples_j.pp.ml  java_profiler_samples_j.pp.mli  java_profiler_samples_t.mli  java_profiler_samples_t.pp.ml  java_profiler_samples_t.pp.mli  jsonbug_j.ml  jsonbug_j.mli  jsonbug_j.pp.ml  jsonbug_j.pp.mli  jsonbug_t.ml  jsonbug_t.pp.ml  (+8 more)
analyzer/infer/_build/default/src/backend/: .merlin  Backend.cmxa  BackendStats.pp.ml  BackendStats.pp.mli  CallGraph.pp.ml  CallGraph.pp.mli  CallbackOfChecker.pp.ml  CallbackOfChecker.pp.mli  ClosureSubstSpecializedMethod.pp.ml  ClosureSubstSpecializedMethod.pp.mli  ClosuresSubstitution.pp.ml  Devirtualizer.pp.ml  GCStats.pp.ml  (+49 more)
analyzer/infer/lib/: models.sql
analyzer/infer/models/infer-out/: .global.tenv  .infer_runstate.json  logs  results.db
analyzer/infer/models/infer-out/tmp/: javac_args.tmp.a52a69
analyzer/infer/src/: dune  dune.common  dune.in  infer.ml
analyzer/infer/src/IR/: ProcAttributes.ml  Procdesc.mli  Typ.ml  Typ.mli
analyzer/infer/src/al/: .merlin
analyzer/infer/src/aprval/: .merlin  Extractor.ml  PatchValidator.ml  dune
analyzer/infer/src/aprval/basic_domain/: .merlin  ValToAP.ml  dune
analyzer/infer/src/aprval/bottom_up/: .merlin  RuntimeCrash.ml  SpecCheckerDomain.mli  SpecCheckerFeatures.ml  SpecCheckerModels.mli  SpecCheckerSummary.ml  SpecCheckerSummary.mli  StateFormula.ml  ValueAnalysis.ml  dune
analyzer/infer/src/aprval/program/: AccessCond.ml  Preproc.ml  WeakMap.ml  dune  interNode.ml  profiler.ml  program.mli
analyzer/infer/src/atd/: InferCommand.mli
analyzer/infer/src/backend/: Summary.ml  dune  registerCheckers.ml
analyzer/infer/src/base/: .merlin  Checker.mli  CommandDoc.ml  Serialization.ml
analyzer/infer/src/c_stubs/: .merlin
analyzer/infer/src/cost/: .merlin
analyzer/infer/src/dotnet/: .merlin
analyzer/infer/src/infer-out/: .infer_runstate.json  logs  results.db
analyzer/infer/src/integration/: .merlin  dune
analyzer/infer/src/java/: .merlin  dune
analyzer/infer/src/test_determinator/: .merlin
analyzer/infer/src/topl/: .merlin
analyzer/m4/: __GENERATED__ac_check_infer_man_last_modified.m4
analyzer/scripts/: bug.py  config.py  d4j.benchmarks.lst  d4j.py  fl4apr.py  pretty_csv.py  tracer.py  utils.py
(+3525 files in other folders)
