; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name APRVAL)
 (public_name infer.APRVAL)
 (flags
  (:standard -open Core -open IR -open Absint -open IStdlib -open IStd -open ATDGenerated -open IBase -open Iprogram -open Botup -open BasicDom))
 (libraries core IStdlib Absint ATDGenerated IBase IR ocamlgraph Iprogram Botup BasicDom)
 (preprocess
  (pps ppx_compare)))
