; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name Botup)
 (public_name infer.APRVAL.Botup)
 (flags
  (:standard -open Core -open IR -open Absint -open IStdlib -open IStd -open ATDGenerated -open IBase -open Iprogram -open BasicDom))
 (libraries core IStdlib Absint ATDGenerated IBase IR ocamlgraph Iprogram BasicDom)
 (preprocess
  (pps ppx_compare)))
