
(env
  (dev
    (flags -g -short-paths -safe-string -principal -strict-formats -strict-sequence -bin-annot -w +3+5+6+8+10+11+12+14+18+19+20+21+23+26+29+27+28+32+33+34+35+37+38+39+50+52+57+60-4-9-40-41-42-45-48)
    (inline_tests enabled))
  (opt
    (flags -g -short-paths -safe-string -principal -strict-formats -strict-sequence -bin-annot -w +3+5+6+8+10+11+12+14+18+19+20+21+23+26+29+27+28+32+33+34+35+37+38+39+50+52+57+60-4-9-40-41-42-45-48)
    (ocamlopt_flags (:standard -O3)))
  (dev-noerror
    (flags -g -short-paths -safe-string -principal -strict-formats -strict-sequence -bin-annot -w +3+5+6+8+10+11+12+14+18+19+20+21+23+26+29+27+28+32+33+34+35+37+38+39+50+52+57+60-4-9-40-41-42-45-48)
    (inline_tests enabled))
  )

(executable
 (name infer)
 (modes byte_complete exe)
 (modules Infer)
 (flags (:standard -open Core -open IStdlib -open IStd -open IBase -open IR -open Backend -open Integration -open Biabduction -open TestDeterminators -open ClangFrontend -open ASTLanguage -open ClangFrontendStubs -open JavaFrontend  -open APRVAL -open Iprogram -open Botup -open BasicDom))
 (libraries extlib core IStdlib IBase IR Backend Integration Biabduction TestDeterminators ClangFrontend ASTLanguage APRVAL Iprogram Botup BasicDom)
 (preprocess (pps ppx_compare))
 (promote (until-clean) (into ../bin))
)
(executable
 (name inferunit)
 (modes byte_complete exe)
 (modules Inferunit)
 (flags (:standard -open Core -open IStdlib -open IStd -open IBase -open Backend -open Integration -open UnitTests -open NullsafeUnitTests -open ClangFrontend -open ClangFrontendStubs))
 (libraries extlib oUnit core IStdlib IBase Backend Integration UnitTests NullsafeUnitTests )
 (preprocess (pps ppx_compare))
 (promote (until-clean) (into ../bin))
)

(executable
 (name infertop)
 (modes byte_complete)
 (modules Infertop)
 (flags (:standard -open Core -open IStdlib -open IStd))
 (libraries extlib utop Absint ASTLanguage ATDGenerated Backend IBase Biabduction BO Checkers Concurrency Costlib CStubs IR IStdlib Labs Nullsafe Pulselib Quandary Integration TestDeterminators TOPLlib UnitTests)
 (link_flags (-linkall -warn-error -31))
 (preprocess (pps ppx_compare))
 (promote (until-clean) (into ../bin))
)
