(ocamllex types_lexer ctl_lexer)

(menhir (modules types_parser ctl_parser))

(library
 (name ASTLanguage)
 (public_name infer.ASTLanguage)
 (modules )
 (flags
  (:standard
     -open Core -open IStdlib -open IStd -open OpenSource -open ATDGenerated
     -open IBase -open IR -open Absint -open ClangFrontend))
 (libraries core IStdlib ATDGenerated IBase IR Absint ClangFrontend)
 (preprocess (pps ppx_compare))
)

(documentation (package infer) (mld_files ASTLanguage))