(library
 (name ClangFrontend)
 (public_name infer.ClangFrontend)
 (modules ClangFrontendStubs)
 (flags
  (:standard
     -open Core -open IStdlib -open IStd -open OpenSource -open ATDGenerated
     -open IBase -open IR -open Absint -open Checkers -open TestDeterminators
     -open Biabduction -open Backend))
 (libraries oUnit core IStdlib ATDGenerated IBase IR Absint Checkers
     TestDeterminators Biabduction Backend)
 (preprocess (pps ppx_compare))
)
(documentation (package infer) (mld_files ClangFrontend))