
(library
 (name Integration)
 (public_name infer.Integration)
 (flags
  (:standard
     -open Core -open IStdlib -open IStd -open OpenSource -open ATDGenerated
     -open IBase -open IR -open Absint -open BO -open Checkers -open Costlib -open Concurrency -open Backend
     -open TestDeterminators -open ClangFrontend -open ASTLanguage -open JavaFrontend -open ClangFrontendStubs ))
 (libraries xmlm core IStdlib ATDGenerated IBase IR Absint BO Checkers Costlib Concurrency Backend
     TestDeterminators ClangFrontend ASTLanguage JavaFrontend)
 (preprocess (pps ppx_compare))
)

(documentation (package infer) (mld_files Integration))