(ocamllex jSourceLexer jSourceFileInfo)
(menhir (modules jSourceParser))
(library
 (name JavaFrontend)
 (public_name infer.JavaFrontend)
 (modules :standard \ JavaFrontendStubs)
 (flags
  (:standard
     -open Core -open IStdlib -open IStd -open OpenSource -open ATDGenerated
     -open IBase -open IR -open Absint -open Biabduction -open Backend))
 (libraries javalib sawja core IStdlib ATDGenerated IBase IR Absint Biabduction Backend)
 (preprocess (pps ppx_compare))
)
(documentation (package infer) (mld_files JavaFrontend))