(library
 (name UnitTests)
 (public_name infer.UnitTests)
 (flags
  (:standard -open Core -open IR -open IStdlib -open IStd -open ATDGenerated
    -open IBase -open Absint -open Backend -open CStubs -open ClangFrontend -open ASTLanguage -open ClangFrontendStubs
    -open Checkers -open Quandary -open TestDeterminators -open Integration))
 (libraries oUnit core IStdlib ATDGenerated IBase IR Absint Backend CStubs ClangFrontend
    ASTLanguage Checkers Quandary TestDeterminators Integration)
 (preprocess (pps ppx_compare))
)